# unformat

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: CI.yml
src/: lib.rs  unformatter.rs  vars.rs
tests/: test_unformat.py
unformat/: __init__.py  _parse.py  _unformat_rust.pyi  core.py
