[build-system]
requires = [
    "maturin>=0.14,<0.15", 
    "typing-extensions>=4.5.0",
]
build-backend = "maturin"
license = "MIT"

[project]
name = "unformat"
requires-python = ">=3.8"
description = "Python string unformatter."
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "unformat._unformat_rust"
bindings = "pyo3"
include = ["LICENSE", "README.md"]
